# skill-dev-session

./: .env.example  SQL_Script_Training.sql  alembic.ini  db.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 318e62dd35d1_create_new_table_users.py
app/: app.py  main.py
app/api/: __init__.py
app/api/controller/: cart_controller.py  cart_items_controller.py  menu_items_controller.py  offers_controller.py  order_items_controller.py  (+5 more)
app/common/: enums.py
app/core/: bootstrap.py  logger.py
app/dto/: __init__.py  cart_dto.py  cart_items_dto.py  menu_items_dto.py  offers_dto.py  order_items_dto.py  order_ratings_dto.py  orders_dto.py  restaurant_dto.py  user_addresses_dto.py  user_dto.py
app/orm/: __init__.py  cart.py  cart_items.py  menu_items.py  offers.py  order_items.py  order_ratings.py  orders.py  restaurants.py  user_addresses.py  users.py
app/repositories/: __init__.py  cart_items_repository.py  cart_repository.py  menu_items_repository.py  offers_repository.py  order_items_repository.py  order_ratings_repository.py  orders_repository.py  restaurant_repository.py  user_addresses_repository.py  user_repository.py
app/services/: __init__.py  cart_items_service.py  cart_service.py  menu_items_service.py  offers_service.py  order_items_service.py  order_ratings_service.py  orders_service.py  restaurant_service.py  user_addresses_service.py  user_service.py
db_migrations/: env.py
db_migrations/versions/: 4b63af5d39dc_initial_migrations_base_schema.py  ebb6a69569a5_add_is_active_column_to_user.py  ed2b766e9d9e_testing.py
(+8 files in other folders)
